src/test/deca/codegen/valid/math_imm_left_int.deca
// Description:
//    Programme testant l'addition avec un immédiat à gauche.
//
// Resultats:
//
//
//
// Historique:
//    cree le 22/01/2023

{
    int x = 5;
    print(5+x);
}