src/test/deca/codegen/error/test_div_0_float.deca
// Description:
//    lecture eronné d'un int
//
// Resultats:
//    Error: Input/Output error
//
//
// Historique:
//    cree le 01/01/2023
{
    print(5.0/0.0);
}


